# .github

./: .editorconfig  .gitignore  GitRepositoryComponent.py  Pulumi.<env>.yaml.example  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.test.yaml  Pulumi.yaml  README.md  __main__.py  devenv.nix  devenv.yaml  pulumi.sh  pyproject.toml  secretspec.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: renovate.json5
.github/renovate/: github-actions.json5  labels.json5  semanticCommits.json5
.github/workflows/: ci.yml  test.yml
git-cliff/: cliff.toml
label/: default.yaml
misc/: SUPPORT.md
src/git_automation/: GitRepositoryComponent.py  git_repository_component.py
src/git_automation/git-cliff/: cliff.toml
src/git_automation/label/: default.yml  renovatebot.yml
src/git_automation/misc/: SUPPORT.md
src/git_automation/templates/goreleaser/: config.yml.j2
src/git_automation/templates/issue/: bug_report.yml.j2  feature_request.yml.j2
src/git_automation/templates/misc/: CODEOWNERS.j2  CODE_OF_CONDUCT.md.j2  FUNDING.yml.j2  PULL_REQUEST_TEMPLATE.md.j2  SECURITY.md.j2  editorconfig.j2  gitignore.j2  labels.yml.j2
src/git_automation/templates/readme/: readme.md.j2
src/git_automation/templates/readme/sections/: configuration.md.j2  contributing.md.j2  dev.md.j2  documentation.md.j2  header.md.j2  license.md.j2  security.md.j2  support.md.j2  table_of_content.md.j2  usage.md.j2
src/git_automation/templates/renovatebot/: renovate.json5.j2  renovatebot.json5.j2
src/git_automation/templates/renovatebot/config/: devContainers.json5.j2  labels.json5.j2  semantic_commits.json5.j2
src/git_automation/templates/vscode/: launch.json.j2  settings.json.j2
src/git_automation/templates/workflow/: ai-generated.yml.j2  automation-sync-pr.j2  automation-sync-pr.yml.j2  ci.yml.j2  codeql.yml.j2  dependency-review.yml.j2  docker.yml.j2  lint-pr.yml.j2  lint.yml.j2  lint_pr.yml.j2  release.yml.j2  scorecard.yml.j2  stale.yml.j2  test.yml.j2  validate-pr-title.yml.j2
templates/dependabot/: dependabot.yml.j2  github-actions.yml.j2  gomod.yml.j2  python.yml.j2
templates/goreleaser/: config.yml.j2
templates/misc/: CODEOWNERS.j2  CODE_OF_CONDUCT.md.j2  FUNDING.yml.j2  SECURITY.md.j2
templates/readme/: readme.md.j2
templates/readme/sections/: documentation.md.j2  header.md.j2  license.md.j2  support.md.j2
templates/renovatebot/: renovate.json5.j2
templates/workflow/: lint_pr.yml.j2  release.yml.j2  test.yml.j2
templates/workflow/changelog/: main.yml.j2  release.yml.j2  upload_step.yml.j2
templates/workflow/go/: package.yml.j2  release.yml.j2
templates/workflow/python/: lint.yml.j2  package.yml.j2  release.yml.j2  test.yml.j2
(+30 files in other folders)
